2001-09-05  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmIconMan/x.c (xevent_loop):
	(map_manager):
	(grab_pointer):
	make sure the pointer is grabbed for transient icon managers even if
	mapping does not make them visible
	(xevent_loop):
	(X_init_manager):
	(create_manager_window):
	IconMan listens to the WM_DELETE protocol
	(xevent_loop):
	fixed an event handling bug

	* FvwmIconMan/x.c (create_manager_window):
	* FvwmWinList/FvwmWinList.c (MakeMeWindow):
	* FvwmButtons/FvwmButtons.c (CreateUberButtonWindow):
	* FvwmPager/x_pager.c (initialize_pager):
	set transient_for hint when running in transient mode

2001-09-04  olicha  <olivier.chapuis@free.fr>

	* FvwmDebug/FvwmDebug.c (list_add)
	New windows_ flags is_placed_by_fvwm

2001-09-01  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmPager/x_pager.c (BorderIconWindow):
	(BorderWindow):
	(draw_window_border):
	(LabelIconWindow):
	(LabelWindow):
	(do_label_window):
	(PictureIconWindow):
	(PictureWindow):
	(do_picture_window):
	(ChangeDeskForWindow):
	(Hilight):
	(change_colorset):
	(AddNewWindow):
	reduced code duplication
	(ReConfigureIcons):
	(MoveResizePagerView):
	cleaned up, take care of icons larger than 1000 pixels
	(DispatchEvent):
	fixed redrawing of the icon window; too many Expose events were eaten

2001-08-28  Dan Espen  <dane@mk.telcordia.com>

	* FvwmAnimate/FvwmAnimate.c: Catch iterations less than 1 and
	line widths less than zero.

2001-08-28  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmIconMan/globals.c (DEFAULT_MOUSE):
	added 'silent' to default action

2001-08-26  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmScript/FvwmScript.c (BuildGUI):
	* FvwmForm/FvwmForm.c (OpenWindows):
	* FvwmBanner/FvwmBanner.c (main):
	* FvwmWinList/FvwmWinList.c (MakeMeWindow):
	(StartMeUp_II):
	* FvwmWharf/FvwmWharf.c (Loop):
	* FvwmTaskBar/FvwmTaskBar.c:
	* FvwmRearrange/FvwmRearrange.c (main):
	* FvwmPager/x_pager.c (initialize_pager):
	* FvwmIdent/FvwmIdent.c (list_end):
	* FvwmIconMan/x.c (X_init_manager):