@@ -1,3 +1,8 @@
+2001-09-07  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* FvwmButtons/draw.c (DrawTitle):
+	applied I18N patch by Shingo Yamaguchi
+
 2001-09-05  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* FvwmIconMan/x.c (xevent_loop):
